[package]
name = "templet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
nom = "7.1.0"
nom-unicode = "0.3.0"
nom_locate = "4.0.0"
v_htmlescape = "0.14.1"
valuable = { version = "0.1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
ramhorns = "0.13.0"

[[bench]]
name = "template"
harness = false
