[package]
name = "templet"
version = "0.2.0"
edition = "2021"
authors = ["Joni Katajamäki"]
description = "Mustache-like templates"
license = "MIT OR Apache-2.0"
keywords = ["html", "template", "mustache", "handlebars"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom-unicode = "0.3.0"
nom_locate = "4.0.0"
ouroboros = "0.14.2"
thiserror = "1.0.30"
v_htmlescape = "0.14.1"
valuable = { version = "0.1.0", features = ["derive"] }
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.3.5"
handlebars = "4.2.2"
ramhorns = "0.13.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[[bench]]
name = "template"
harness = false
