[package]
name = "templet"
version = "0.5.0"
edition = "2021"
authors = ["Joni Katajamäki"]
description = "Mustache-like templates"
license = "MIT OR Apache-2.0"
keywords = ["html", "template", "mustache", "handlebars"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_reflect = { git = "https://github.com/bevyengine/bevy", rev = "92ba6224b9b66eb77" }
nom = "7.1.0"
nom-unicode = "0.3.0"
nom_locate = "4.0.0"
ouroboros = "0.15.5"
thiserror = "1.0.30"
v_htmlescape = "0.15.8"
walkdir = "2.3.2"

[dev-dependencies]
criterion = "0.4.0"
handlebars = "4.2.2"
pretty_assertions = "1.2.0"
ramhorns = "0.14.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[[bench]]
name = "template"
harness = false
